--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
-plugins {
-    id 'java'
-}
+apply plugin: "java"
+apply plugin: "idea"
+apply plugin: "kotlin"
+apply plugin: "org.jlleitschuh.gradle.ktlint"
 
 group 'pc-18-preh-oc-mock'
 version '1.0-SNAPSHOT'
@@ -13,4 +14,23 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compileKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+    compileTestKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+}
+
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.40"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:8.0.0"
+    }
 }
