--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,9 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "io.vertx:vertx-lang-kotlin:3.7.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.41"
+    implementation 'io.vertx:vertx-web-client:3.7.1'
 }
 
 compileKotlin {
@@ -37,8 +39,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.40"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.41"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:8.0.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
