--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
+def productionPath = rootDir.path + jarsFolder
+
 apply plugin: "java"
 apply plugin: "idea"
 apply plugin: "kotlin"
 apply plugin: "org.jlleitschuh.gradle.ktlint"
+apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: "application"
+mainClassName = "Main"
 
 group 'pc-18-preh-oc-mock'
 version '1.0-SNAPSHOT'
@@ -14,8 +19,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation "io.vertx:vertx-lang-kotlin:3.7.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.41"
+    implementation "io.vertx:vertx-lang-kotlin:3.7.1"
     implementation 'io.vertx:vertx-web-client:3.7.1'
 }
 
@@ -30,6 +35,17 @@ compileTestKotlin {
     }
 }
 
+shadowJar {
+    baseName = rootProject.name
+    version = projectVersion
+    classifier = project.name
+    destinationDir = file(productionPath)
+}
+
+clean {
+    delete(file(productionPath))
+}
+
 buildscript {
     ext.kotlin_version = '1.3.41'
     repositories {
@@ -41,5 +57,6 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.41"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:8.0.0"
+        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.3'
     }
 }
